Date input values should not overlap with menu list dropdown button on iOS https://bugs.webkit.org/show_bug.cgi?id=150681 <rdar://problem/19965078>
Reviewed by Zalan Bujtas.

Source/WebCore:

Adds a right margin on iOS date and time inputs so that the inner div does
not render the value of the date on top of the dropdown button on the right
of the menu list.

Tests: fast/forms/date/date-input-rendering-basic.html
       fast/forms/time/time-input-rendering-basic.html

* css/html.css:
(input::-webkit-date-and-time-value):

LayoutTests:

Tests that date and time inputs render properly. Namely, the text should not
be rendered such that it covers the dropdown button on the right of the menu
list.

* fast/forms/date/date-input-rendering-basic-expected.txt: Added.
* fast/forms/date/date-input-rendering-basic.html: Added.
* fast/forms/time/time-input-rendering-basic-expected.txt: Added.
* fast/forms/time/time-input-rendering-basic.html: Added.


Canonical link: https://commits.webkit.org/168855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191751 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -526,12 +526,14 @@ input[type="week"] {
 #endif
 #endif
 
-#if !(defined(WTF_PLATFORM_IOS) && WTF_PLATFORM_IOS)
 input::-webkit-date-and-time-value {
+#if defined(WTF_PLATFORM_IOS) && WTF_PLATFORM_IOS
+    margin-right: 18px;
+#else
     margin: 1px 24px 1px 4px;
     white-space: pre;
-}
 #endif
+}
 
 input::-webkit-inner-spin-button {
     -webkit-appearance: inner-spin-button;
